@@ -1,3 +1,7 @@
+2009-04-15  Ozkan Sezer  <sezeroz@gmail.com>
+
+	* gdtoa/dtoa.c: Sync'ed with the netlib.org sources.
+
 2009-04-14  Ozkan Sezer  <sezeroz@gmail.com>
 
 	* gdtoa/dmisc.c, gdtoa/dtoa.c, gdtoa/gdtoa.c, gdtoa/gdtoa.h,
